[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameScreen.gd" type="Script" id=1]
[ext_resource path="res://CoinPath.tscn" type="PackedScene" id=2]
[ext_resource path="res://HadamardPowUp.tscn" type="PackedScene" id=3]

[node name="GameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="CoinPath" parent="." instance=ExtResource( 2 )]

[node name="HadamardPowUp" parent="." instance=ExtResource( 3 )]

[node name="Timers" type="Node" parent="."]

[node name="CoinTimer" type="Timer" parent="Timers"]

[node name="HadPowUpTimer" type="Timer" parent="Timers"]
wait_time = 10.0

[connection signal="HadPowUP_on" from="HadamardPowUp" to="." method="activateHadPU"]
[connection signal="timeout" from="Timers/CoinTimer" to="." method="_on_CoinTimer_timeout"]
[connection signal="timeout" from="Timers/HadPowUpTimer" to="." method="_on_HadPowUpTimer_timeout"]
